objects/Data_Growth__c.object
<CustomObject>
    <description>This object stores data from source report snapshots for monitoring record counts for Cases and Tasks</description>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>DateTime</type>
    </fields>
    <label>Data Growth</label>
    <nameField>
        <displayFormat>DG-{00000000}</displayFormat>
        <label>Data Growth Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Growth</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>